WebApplication1/WebApplication1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-sample-app
  labels:
    app: dotnet-sample-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnet-sample-app
  template:
    metadata:
      labels:
        app: dotnet-sample-app
    spec:
      containers:
      - name: dotnet-app
        image: mojomughil/dotnet-sample-app-demo:v1
        ports:
        - containerPort: 80
