WebApplication1/WebApplication1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-sample-app-service
spec:
  type: ClusterIP
  selector:
    app: dotnet-sample-app
  ports:
    - port: 8010          # Service port inside cluster
      targetPort: 80      # Container port
      nodePort: 30007     # External port for Node access
